trunk/Archive2/c8/90c82bbf85f274/output
main.cpp:7:32: error: 'string' has not been declared
 struct a : std::string { using string::string; };
                                ^
main.cpp:10:37: error: 'template<class _CharT, class _Traits, class _Alloc> class std::basic_string' used without template parameters
 struct d : std::string { using std::basic_string::basic_string; };
                                     ^
